--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.0.0
+  flutter_lints: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -19,4 +21,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  assets:
+    - assets/images/login_background.jpg
