--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.0.0
   flutter_lints: ^5.0.0
+  atproto_core: ^0.11.2
+  bluesky: ^0.18.9
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
