--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bluesky: ^0.18.9
   shared_preferences: ^2.5.2
   atproto: ^0.13.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
