--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.5.2
   atproto: ^0.13.3
   intl: ^0.20.2
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
