added gifs, youtube videos, adjusted video logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   atproto: ^0.13.3
   intl: ^0.20.2
   video_player: ^2.9.3
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
