--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   video_player: ^2.9.3
   youtube_player_flutter: ^9.1.1
   provider: ^6.1.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
